...
  );

  static const List<Product> products = [
    // Laticínios
    Product(
      id: 'p01',
      name: 'Leite Integral',
      brand: 'Tirol',
      category: 'Laticínios',
      imageUrl:
          'https://bistek.vtexassets.com/arquivos/ids/207160-800-800?v=638888095157130000&width=800&height=800&aspect=true',
      averagePrice: 5.49,
      tags: ['laticínio', 'bebida'],
...
